2008-01-27    <jeff@mini.nerble.net>

	* schedule.cc, actions.cc, actions.h: Made the 'talk' schedule
	more aggressive, so it's harder for the Avatar to get away.

2008-01-27	Marzo Sette Torres Junior <marzojr@yahoo.com>
	"Fixed" operator precedence rules for UCC to be more like those of C/C++.
	Making UCC emit bytes for script opcodes as the originals do; UCC is
	now able to declare byte constants with 'const char' and 'const byte'.
	For the same reasons, functions called with CALLE are also linked in the
	same way as functions called with CALL; functions with 32-bit function ids,
	as well as class methods, are not linked. Finally, function IDs/shapes can
	now be specified through defined constants.

2008-01-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
	MinGW specific: Removed Makefile.studio.mingw file; compilation in MinGW now
	uses only Makefile.mingw. Compilation/distribution os ES and the GIMP plug-in
	is done with the (self-explanatory) commands 'studioinstall', 'studiodist',
	'maptools', 'maptoolsinstall', 'maptoolsdist' and 'studioclean'.
	Makefile.mingw commands 'allclean' and 'allinstall' also clean and install
	(respectivelly) Exult Studio (but not the GIMP plug-in).
	Also updated Readme.win32 accordingly.

2008-01-19	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Added overloaded methods for Fast_pathfinder_client::is_grabable to make
	  use of the new distance function.
	* Exult Studio/Exult can now search for a shape of a given frame as well.
	* Fixed can_avatar_reach_pos intrinsic.
	* Switched from DELTA_WRAP_CHECK and DELTA_CHECK macros to static inline
	  functions to prevent possible undetected problems.
	* Update of MSVC projects, including a new project for ES (though I doubt
	  it compiles).

2008-01-11    <jeff@mini.nerble.net>

	* actions.cc (Path_walking_actor_action): 'speed' wasn't being
	initialized, sometimes causing SI to hang at start.

2008-01-09    <jeff@mini.nerble.net>
